@@ -1,5 +1,10 @@
  (Format: Year/Month/Day)
 Changes for 1.0.0:
+*07/05/20:
+   * Fixed bug #1717782, Bad fullscreen in ooimpress2  ( Henrik )
+     mwm hint had no-resize which made resizing with 
+     FluxboxWindow::setFullscreen impossible.
+     Window.cc
 *07/05/19:
    * Fixed bug #1718112, memory leak in FbWindow::textProperty ( Henrik )
      FbTk/FbWindow.cc
